--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 .App {
+  font-family: 'Roboto',sans-serif;
   display: flex;
   align-items: center;
   margin: 5%;
